--- a/app/admin/templates/partials/_sidebar.html
+++ b/app/admin/templates/partials/_sidebar.html
@@ -28,7 +28,7 @@
       </a>
       <div class="collapse" id="form-elements">
         <ul class="nav flex-column sub-menu" style="background: white;">
-          <li class="nav-item"><a class="nav-link" href="{{url_for('admin_blueprint.admin_basic_elements')}}" style="color: #5c5656;">Application List</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('admin_blueprint.admin_std_app_list')}}" style="color: #5c5656;">Application List</a></li>
         </ul>
       </div>
     </li>
