--- a/app/home/templates/layouts/signin.html
+++ b/app/home/templates/layouts/signin.html
@@ -31,7 +31,7 @@
                 {% block content %}
                 {% endblock content %}
             
-                <!-- {% include "partials/_footerhome.html" %} -->
+                {% include "partials/_footerhome.html" %}
 
 
 
