--- a/app/home/templates/partials/_navbarhome.html
+++ b/app/home/templates/partials/_navbarhome.html
@@ -18,7 +18,7 @@
 						</ul>
 					</li>
 					<li><a href="contact.html">Contact Us</a></li>
-					<li><a class="btn" href="{{url_for('home_blueprint.signin_page')}}">Login</a></li>
+					<li><a class="btn" href="{{url_for('home_blueprint.login')}}">Login</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
