--- a/app/home/static/css/main.css
+++ b/app/home/static/css/main.css
@@ -15,6 +15,13 @@
 	min-height: 100px;
 	padding-top: 0px;
 }
+#head .text {
+	bottom: 0;
+	background: rgb(0, 0, 0);/* Fallback color */
+	background: rgba(0, 0, 0, 0.5);/* Black background with opacity */
+	color: #ffffff;
+  }
+
 
 #head .lead {
 	font-family: fantasy;
