--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -10,7 +10,7 @@
 	<!-- Header -->
 	<header id="head">
 		<div class="container">
-			<div class="row">
+			<div class="row text">
 				<h1 class="lead">School Of WILL:</h1>
 				<p class="tagline">Winners, Innovators, Leaders & Learners</p>
 				<p> <a href="{{url_for('home_blueprint.enroll_page')}}" class="btn btn-action btn-lg" role="button">ENROLL NOW</a></p>
@@ -90,7 +90,7 @@
 		<h2 class="text-center top-space">NATIONAL AWARDS</h2>
 		<hr>
 
-		<div class="row">
+		<div class="row cous">
 			<div class="col-sm-6">
 				<div id="myCarousel" class="carousel slide" data-ride="carousel">
 					<!-- Indicators -->
