--- a/app/home/templates/signin.html
+++ b/app/home/templates/signin.html
@@ -3,7 +3,8 @@
 {% block title %} Login {% endblock title %}
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 {% endblock stylesheets %}
 
 {% block content %}
@@ -20,34 +21,45 @@
 		<!-- Article main content -->
 		<article class="col-xs-12 maincontent">
 			<hr>
-			 <div class="col-md-6 col-md-offset-3 col-sm-6	 col-sm-offset-2"> 
+			<div class="col-md-6 col-md-offset-3 col-sm-6	 col-sm-offset-2">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<h1 class="well" style="font-family: 'Neuton', serif; text-align: center; margin-top: 10px;">ADMIN LOGIN</h1>
+						<h1 style="font-family: 'Neuton', serif; text-align: center; margin-top: 10px;">
+							Admin Login
+
+						</h1>
+						<p style="text-align: center; margin-top: 10px;">Please enter your credentials to login to the
+							system</p>
 						<hr>
-						    <div class="well">
-								<form>
-									<div class="top-margin">
-										<label>Email  <span class="text-danger">*</span></label>
-										<input type="text" class="form-control">
+						<div class="well">
+							<span class="mb-0 text-muted text-center">
+
+							</span>
+							<div class="alert alert-danger" id="invalid" role="alert" style="display: none;"></div>
+							<form role="form" method="post" action="" id="login-form">
+
+								{{ form.hidden_tag() }}
+								<div class="row">
+									<div class="col-md-12">
+										{{ form.username(placeholder="Username", class="form-control form-control") }}
 									</div>
-									<div class="top-margin">
-										<label>Password  <span class="text-danger">*</span></label>
-										<input type="password" class="form-control">
+								</div>
+								<br>
+								<div class="row">
+									<div class="col-md-12">
+										{{ form.password(placeholder="Password", class="form-control form-control-sm")
+										}}
 									</div>
-										<br>
-									<hr>
-										<br>
-									<div class="row" style="margin-top: -32px;">
-										<div class="col-lg-8">
-											<b><a href="">Forgot password?</a></b>
-										</div>
-										<div class="col-lg-4 text-right">
-											<button class="btn btn-action" type="submit"><a href="{{url_for('admin_blueprint.admin_dashboard')}}">Sign in</a></button>
-										</div>
-									</div>
-								</form>
-							</div>	
+								</div>
+
+								<div class="form-group text-left">
+									<span id="passwordHelpBook" class="help-block"><a href="javascript:void(0);">Forgot
+											password?</a></span>
+								</div>
+								<button type="submit" name="login"
+									class="btn btn-primary shadow-2 mb-4 btn-sm">Login</button>
+							</form>
+						</div>
 					</div>
 				</div>
 
@@ -65,4 +77,34 @@
 
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+	crossorigin="anonymous"></script>
+<script>
+	$("#login-form").on("submit", function (e) {
+		e.preventDefault(e);
+		var form_data = new FormData($('#login-form')[0])
+		$.ajax({
+			type: 'POST',
+			url: "/login",
+			data: form_data,
+			contentType: false,
+			cache: false,
+			processData: false,
+			success: function (res) {
+				if (res.output.fa_required == "invalid") {
+					$("#invalid").show();
+					$("#invalid").html(res.output.message);
+					
+				} else {
+					window.location = "/admin-dashboard";
+				}
+
+			}
+
+		});
+	});
+</script>
 {% endblock javascripts %}
