--- a/app/home/templates/enroll_student.html
+++ b/app/home/templates/enroll_student.html
@@ -135,12 +135,12 @@
 					
 						<hr class="my-4" >
 						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<label for="phone" class="form-control-label">Marksheet</label>
-									<input type="file" class="dropify form-control rounded-2" name="marksheet"
+							<div class="col-sm-4 form-group">
+								
+									<label for="marksheet" class="form-control-label">Marksheet</label>
+									<input type="file" class="form-control " name="marksheet"
 										id="marksheet" />
-								</div>
+								
 							</div>
 						</div>
 						<div class="row">
