--- a/app/admin/templates/partials/_navbar.html
+++ b/app/admin/templates/partials/_navbar.html
@@ -77,7 +77,7 @@
             <i class="ti-settings text-primary"></i>
             Settings
           </a>
-          <a href="{{url_for('home_blueprint.login')}}" class="dropdown-item">
+          <a href="{{url_for('home_blueprint.logout')}}" class="dropdown-item">
             <i class="ti-power-off text-primary"></i>
             Logout
           </a>
