--- a/app/admin/templates/layouts/admin_main.html
+++ b/app/admin/templates/layouts/admin_main.html
@@ -24,6 +24,9 @@
     <link rel="shortcut icon" href="../static/admin_images/favicon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css" type="text/css" />
+  
     {% block stylesheets %}{% endblock stylesheets %}
 </head>
 
@@ -62,7 +65,7 @@
     <script src="../static/admin_js/dataTables.select.min.js"></script>
     <script src="../static/admin_vendors/typeahead.js/typeahead.bundle.min.js"></script>
     <script src="../static/admin_vendors/select2/select2.min.js"></script>
-
+    
     <!-- End plugin js for this page -->
     <!-- inject:js -->
     <script src="../static/admin_js/off-canvas.js"></script>
@@ -78,6 +81,8 @@
     <script src="../static/admin_js/file-upload.js"></script>
   <script src="../static/admin_js/typeahead.js"></script>
   <script src="../static/admin_js/select2.js"></script>
+  <script src="../static/admin_js/main_admin.js"></script>
+
     <!-- End custom js for this page-->
 </body>
 
