--- a/app/home/templates/enroll_student.html
+++ b/app/home/templates/enroll_student.html
@@ -74,7 +74,7 @@
 							</select>
 						</div>
 						<div class="col-sm-4 form-group">
-							<label for="permanent_village" class="pull-left form-label">Gewog</label>
+							<label for="permanent_village" class="pull-left form-label">Village</label>
 							<select class="form-control form-select" id="permanent_village" name="permanent_village">
 								<option value="">---Select Village---</option>
 							</select>
@@ -137,7 +137,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-									<label for="phone" class="form-control-label">Marksheet</label>
+									<label for="phone" class="form-control-label">Upload Marksheet (image)</label>
 									<input type="file" class="dropify form-control rounded-2" name="marksheet"
 										id="marksheet" />
 								</div>
