--- a/app/home/templates/enroll_student.html
+++ b/app/home/templates/enroll_student.html
@@ -135,13 +135,14 @@
 					
 						<hr class="my-4" >
 						<div class="row">
-							<div class="col-md-6">
+							<div class="col-md-4">
 								<div class="form-group">
 									<label for="phone" class="form-control-label">Upload Marksheet (image)</label>
-									<input type="file" class="dropify form-control rounded-2" name="marksheet"
+									<input type="file" class="form-control rounded-2" name="marksheet"
 										id="marksheet" />
 								
 							</div>
+						</div>
 						</div>
 						<div class="row">
 						<div class="col-sm-4 form-group">
