--- a/app/admin/templates/admin.html
+++ b/app/admin/templates/admin.html
@@ -30,16 +30,19 @@
                 </div>
                 <div class="col-12 col-xl-4">
                  <div class="justify-content-end d-flex">
-                  <div class="dropdown flex-md-grow-1 flex-xl-grow-0">
-                    <button class="btn btn-sm btn-light bg-white dropdown-toggle" type="button" id="dropdownMenuDate2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                     <i class="mdi mdi-calendar"></i> Today (10 Jan 2021)
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuDate2">
-                      <a class="dropdown-item" href="#">January - March</a>
-                      <a class="dropdown-item" href="#">March - June</a>
-                      <a class="dropdown-item" href="#">June - August</a>
-                      <a class="dropdown-item" href="#">August - November</a>
-                    </div>
+                  
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-md-12">
+                         <form method="post">
+                            <!--component-->
+                            <div class="form-group">
+                              <p id="date_admin"></p>
+                            </div>
+                         </form>
+                      </div>
+                    </div>  
+                  </div>
                   </div>
                  </div>
                 </div>
@@ -49,20 +52,15 @@
           <div class="row">
             <div class="col-md-6 grid-margin stretch-card">
               <div class="card tale-bg">
-                <div class="card-people mt-auto">
-                  <img src="../static/admin_images/dashboard/people.svg" alt="people">
+                  <img src="../static/admin_images/dashboard/view.jpg" alt="iamge of ugyen academy">
                   <div class="weather-info">
                     <div class="d-flex">
-                      <div>
-                        <h2 class="mb-0 font-weight-normal"><i class="icon-sun mr-2"></i>31<sup>C</sup></h2>
-                      </div>
                       <div class="ml-2">
-                        <h4 class="location font-weight-normal">Bangalore</h4>
-                        <h6 class="font-weight-normal">India</h6>
+                        <h4 class="location font-weight-normal">Ugyen Academy</h4>
+                        <h6 class="font-weight-normal">Punakha</h6>
                       </div>
                     </div>
                   </div>
-                </div>
               </div>
             </div>
             <div class="col-md-6 grid-margin transparent">
@@ -70,18 +68,18 @@
                 <div class="col-md-6 mb-4 stretch-card transparent">
                   <div class="card card-tale">
                     <div class="card-body">
-                      <p class="mb-4">Today’s Bookings</p>
-                      <p class="fs-30 mb-2">4006</p>
-                      <p>10.00% (30 days)</p>
+                      <p class="mb-4">TOTAL STAFF :</p>
+                      <p class="fs-30 mb-2">56</p>
+                      <p>10.00% (13 supporting staff)</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6 mb-4 stretch-card transparent">
                   <div class="card card-dark-blue">
                     <div class="card-body">
-                      <p class="mb-4">Total Bookings</p>
-                      <p class="fs-30 mb-2">61344</p>
-                      <p>22.00% (30 days)</p>
+                      <p class="mb-4">TOTAL STUDENT :</p>
+                      <p class="fs-30 mb-2">703</p>
+                      <p>22.00% (30 dayscolor)</p>
                     </div>
                   </div>
                 </div>
@@ -90,18 +88,18 @@
                 <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
                   <div class="card card-light-blue">
                     <div class="card-body">
-                      <p class="mb-4">Number of Meetings</p>
-                      <p class="fs-30 mb-2">34040</p>
-                      <p>2.00% (30 days)</p>
+                      <p class="mb-4">TOTAL BOYS :</p>
+                      <p class="fs-30 mb-2">332</p>
+                      <p>45.00% (boys of total stds)</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6 stretch-card transparent">
                   <div class="card card-light-danger">
                     <div class="card-body">
-                      <p class="mb-4">Number of Clients</p>
-                      <p class="fs-30 mb-2">47033</p>
-                      <p>0.22% (30 days)</p>
+                      <p class="mb-4">TOTAL GIRLS :</p>
+                      <p class="fs-30 mb-2">412</p>
+                      <p>55.22% (girls of total stds)</p>
                     </div>
                   </div>
                 </div>
@@ -345,6 +343,9 @@
 
 <!-- Specific JS goes HERE --> 
 {% block javascripts %}
+<script>
+  const d = new Date();
+  document.getElementById("date_admin").innerHTML = d;
+</script>
 {% endblock javascripts %}
 
-  
