--- a/app/home/templates/enroll_student.html
+++ b/app/home/templates/enroll_student.html
@@ -13,7 +13,11 @@
 </ol>
 <hr> 
 <div class="container">
-	<h1 class="well" style="font-family: 'Neuton', serif; text-align: center;">REGISTER WITH UGYEN ACADEMY</h1>
+	<div class="well">
+		<h1 style="font-family: 'Neuton', serif; text-align: center;">Preliminary Information form for Class X Repeater(s) Admission 2022-Ugyen Academy  </h1>
+		<h6>UA is pleased to announce the availability of few seats in class X for repeaters of BCSE 2021. To submit the preliminary information on the admission, please follow this link:
+		Please provide the INFORMATION as per the BCSEA registration, For Any inquires contact Miss Sonam Zangmo @ 17587021 </p>
+	</div>	
 	<div class="col-lg-12 well">
 		<div class="row">
 			<form method="POST" id="registration_form" action="" enctype="multipart/form-data">
